--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,24 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 		http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+    <groupId>clinic.programmming</groupId>
+    <artifactId>maven-quick-start</artifactId>
+    <version>1.1</version>
 	
    <dependencies>
         <dependency>
-             <groupId>org.apache.commons</groupId>
-             <artifactId>commons-lang3</artifactId>
-             <version>3.12.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency> 
+		
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+			<scope>test</scope>
+        </dependency>
 	</dependencies>	
 		
   <build>
@@ -28,8 +39,5 @@
     
    </build>
   
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>clinic.programmming</groupId>
-  <artifactId>maven-quick-start</artifactId>
-  <version>1.0</version>
+  
 </project>
